Fixed tab not showing correctly

--- a/src/main/frontend/css/venus.css
+++ b/src/main/frontend/css/venus.css
@@ -89,6 +89,10 @@ body {
     display: none;
 }
 
+#tracerSettings-tab-view {
+    display: none;
+}
+
 #memory-table {
     font-family: Courier New, Courier, monospace;
     margin: auto;
